Setting user feign client + corrections